<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <androidx.core.widget.NestedScrollView
        app:layout_constraintVertical_bias="0.04"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_app_food_order"
                android:layout_gravity="center"
                app:tint="@color/color_app_default" />
            <TextView
                android:layout_marginTop="10dp"
                android:textAppearance="@style/title_item_food_sub"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions_content"/>
            <TextView
                android:layout_marginTop="15dp"
                android:textAppearance="@style/title_item_food_sub"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions_content_1"/>
            <TextView
                android:layout_marginTop="15dp"
                android:textAppearance="@style/title_item_food_sub"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions_content_2"/>
            <TextView
                android:layout_marginTop="15dp"
                android:textAppearance="@style/title_item_food_sub"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions_content_3"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>