<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="30dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/dialog_title"
            android:text="@string/title_login_dialog_error"
            android:textAppearance="@style/title"
            android:textColor="@color/white"
            android:background="@color/tab_selected"
            app:layout_constraintVertical_bias="0"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:text="@string/error_network_disconnected"
            android:textAppearance="@style/title"
            android:padding="5dp"
            android:textSize="18dp"
            app:layout_constraintVertical_bias="0"
            android:id="@+id/dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

        <TextView
            app:layout_constraintVertical_bias="1"
            app:layout_constraintHorizontal_bias="0.9"
            android:textColor="@color/color_text_default"
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_dialog_negative"
            android:textAppearance="@style/title_item_food"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>