<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bgr_food_delivery"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.6" />

        <TextView
            android:id="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_successful_title"
            android:textAppearance="@style/title"
            app:layout_constraintBottom_toTopOf="@+id/line_divide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/text_2"
            android:gravity="center"
            android:textAppearance="@style/title_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/payment_successful_thank"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_1"/>

        <TextView
            android:id="@+id/text_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/payment_successful_back_home"
            android:textAppearance="@style/title_item"
            app:layout_constraintBottom_toTopOf="@+id/line_divide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_2"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.5" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.93" />
        <RelativeLayout
            android:id="@+id/btnBackToHome"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/tab_selected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/line_divide">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/payments_back_to_home"
                android:drawableTint="@color/white"
                android:textStyle="normal"
                android:textAppearance="@style/title"
                android:textColor="@color/white" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>